--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ psycopg2-binary = "~=2.9.6"
 gunicorn = "~=20.1.0"
 sensirion-gas-index-algorithm = "~=3.2.2"
 
+pandas = "~=2.1.4"
+plotly = "~=5.18.0"
+
 [requires]
 python_version = "~=3.11"
 
