--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   web:
     build: .
@@ -18,7 +17,7 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgres:15-alpine3.19
     restart: always
     environment:
       - POSTGRES_USER=${DB_USER}
